@startuml

title __STATE-MP3's Class Diagram__\n

  namespace Test {
    class Test.TestMp3 {
    }
  }
  

  namespace com.company {
    class com.company.Cancion {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    interface com.company.Modo {
    }
  }
  

  namespace com.company {
    class com.company.Mp3 {
    }
  }
  

  namespace com.company {
    class com.company.Pausa {
    }
  }
  

  namespace com.company {
    class com.company.Reproduccion {
    }
  }
  

  namespace com.company {
    class com.company.Seleccion {
    }
  }
  

  Test.TestMp3 o-- com.company.Cancion : cancion1
  Test.TestMp3 o-- com.company.Mp3 : mp3
  com.company.Mp3 o-- com.company.Cancion : cancionEnReproduccion
  com.company.Mp3 o-- com.company.Modo : modo
  com.company.Mp3 o-- com.company.Pausa : pausa
  com.company.Mp3 o-- com.company.Reproduccion : reproduccion
  com.company.Mp3 o-- com.company.Seleccion : seleccion
  com.company.Pausa .up.|> com.company.Modo
  com.company.Pausa o-- com.company.Mp3 : mp3
  com.company.Reproduccion .up.|> com.company.Modo
  com.company.Reproduccion o-- com.company.Mp3 : mp3
  com.company.Seleccion .up.|> com.company.Modo
  com.company.Seleccion o-- com.company.Mp3 : mp3


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
